# render-and-rotate

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: coin.hpp  cube.hpp  screen.hpp  shape3d.hpp  structures.hpp
src/: coin.cpp  cube.cpp  main.cpp  screen.cpp  shape3d.cpp
